jackett/jackett-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: media-services
spec:
  selector:
    app: jackett
  ports:
    - name: jackett
      port: 9117
      targetPort: 9117
